--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Avenir Next Condensed';
-  src: url('../fonts/Avenir Next Condensed.ttc');
+  src: url('fonts/Avenir Next Condensed.ttc');
 }
 
 * {
